{
  "version": 4,
  "terraform_version": "1.0.7",
  "serial": 28,
  "lineage": "b6d9e2f3-8b11-f037-0b74-4e006ff51193",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "snet-app-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6a714e87-de1b-4221-a6e1-f587288b158d/resourceGroups/hr-dev-rg-wzxgsh/providers/Microsoft.Network/networkSecurityGroups/appsubnet-nsg",
            "location": "uksouth",
            "name": "appsubnet-nsg",
            "resource_group_name": "hr-dev-rg-wzxgsh",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.snet-app",
            "azurerm_virtual_network.vnet",
            "random_string.randomstr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "snet-bastion-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6a714e87-de1b-4221-a6e1-f587288b158d/resourceGroups/hr-dev-rg-wzxgsh/providers/Microsoft.Network/networkSecurityGroups/bastionsubnet-nsg",
            "location": "uksouth",
            "name": "bastionsubnet-nsg",
            "resource_group_name": "hr-dev-rg-wzxgsh",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.snet-bastion",
            "azurerm_virtual_network.vnet",
            "random_string.randomstr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "snet-db-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6a714e87-de1b-4221-a6e1-f587288b158d/resourceGroups/hr-dev-rg-wzxgsh/providers/Microsoft.Network/networkSecurityGroups/dbsubnet-nsg",
            "location": "uksouth",
            "name": "dbsubnet-nsg",
            "resource_group_name": "hr-dev-rg-wzxgsh",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.snet-db",
            "azurerm_virtual_network.vnet",
            "random_string.randomstr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "snet-web-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6a714e87-de1b-4221-a6e1-f587288b158d/resourceGroups/hr-dev-rg-wzxgsh/providers/Microsoft.Network/networkSecurityGroups/websubnet-nsg",
            "location": "uksouth",
            "name": "websubnet-nsg",
            "resource_group_name": "hr-dev-rg-wzxgsh",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.snet-web",
            "azurerm_virtual_network.vnet",
            "random_string.randomstr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "snet-app-nsg-rule-inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/6a714e87-de1b-4221-a6e1-f587288b158d/resourceGroups/hr-dev-rg-wzxgsh/providers/Microsoft.Network/networkSecurityGroups/appsubnet-nsg/securityRules/Rule-Port-80",
            "name": "Rule-Port-80",
            "network_security_group_name": "appsubnet-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-wzxgsh",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.snet-app-nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.snet-app",
            "azurerm_virtual_network.vnet",
            "random_string.randomstr"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/6a714e87-de1b-4221-a6e1-f587288b158d/resourceGroups/hr-dev-rg-wzxgsh/providers/Microsoft.Network/networkSecurityGroups/appsubnet-nsg/securityRules/Rule-Port-443",
            "name": "Rule-Port-443",
            "network_security_group_name": "appsubnet-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-wzxgsh",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.snet-app-nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.snet-app",
            "azurerm_virtual_network.vnet",
            "random_string.randomstr"
          ]
        },
        {
          "index_key": "120",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/6a714e87-de1b-4221-a6e1-f587288b158d/resourceGroups/hr-dev-rg-wzxgsh/providers/Microsoft.Network/networkSecurityGroups/appsubnet-nsg/securityRules/Rule-Port-22",
            "name": "Rule-Port-22",
            "network_security_group_name": "appsubnet-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-wzxgsh",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.snet-app-nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.snet-app",
            "azurerm_virtual_network.vnet",
            "random_string.randomstr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "snet-bastion-nsg-rule-inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/6a714e87-de1b-4221-a6e1-f587288b158d/resourceGroups/hr-dev-rg-wzxgsh/providers/Microsoft.Network/networkSecurityGroups/bastionsubnet-nsg/securityRules/Rule-Port-22",
            "name": "Rule-Port-22",
            "network_security_group_name": "bastionsubnet-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-wzxgsh",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.snet-bastion-nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.snet-bastion",
            "azurerm_virtual_network.vnet",
            "random_string.randomstr"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/6a714e87-de1b-4221-a6e1-f587288b158d/resourceGroups/hr-dev-rg-wzxgsh/providers/Microsoft.Network/networkSecurityGroups/bastionsubnet-nsg/securityRules/Rule-Port-3389",
            "name": "Rule-Port-3389",
            "network_security_group_name": "bastionsubnet-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-wzxgsh",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.snet-bastion-nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.snet-bastion",
            "azurerm_virtual_network.vnet",
            "random_string.randomstr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "snet-db-nsg-rule-inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3306",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/6a714e87-de1b-4221-a6e1-f587288b158d/resourceGroups/hr-dev-rg-wzxgsh/providers/Microsoft.Network/networkSecurityGroups/dbsubnet-nsg/securityRules/Rule-Port-3306",
            "name": "Rule-Port-3306",
            "network_security_group_name": "dbsubnet-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-wzxgsh",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.snet-db-nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.snet-db",
            "azurerm_virtual_network.vnet",
            "random_string.randomstr"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "1433",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/6a714e87-de1b-4221-a6e1-f587288b158d/resourceGroups/hr-dev-rg-wzxgsh/providers/Microsoft.Network/networkSecurityGroups/dbsubnet-nsg/securityRules/Rule-Port-1433",
            "name": "Rule-Port-1433",
            "network_security_group_name": "dbsubnet-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-wzxgsh",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.snet-db-nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.snet-db",
            "azurerm_virtual_network.vnet",
            "random_string.randomstr"
          ]
        },
        {
          "index_key": "120",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "5432",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/6a714e87-de1b-4221-a6e1-f587288b158d/resourceGroups/hr-dev-rg-wzxgsh/providers/Microsoft.Network/networkSecurityGroups/dbsubnet-nsg/securityRules/Rule-Port-5432",
            "name": "Rule-Port-5432",
            "network_security_group_name": "dbsubnet-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-wzxgsh",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.snet-db-nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.snet-db",
            "azurerm_virtual_network.vnet",
            "random_string.randomstr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "snet-web-nsg-rule-inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/6a714e87-de1b-4221-a6e1-f587288b158d/resourceGroups/hr-dev-rg-wzxgsh/providers/Microsoft.Network/networkSecurityGroups/websubnet-nsg/securityRules/Rule-Port-80",
            "name": "Rule-Port-80",
            "network_security_group_name": "websubnet-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-wzxgsh",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.snet-web-nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.snet-web",
            "azurerm_virtual_network.vnet",
            "random_string.randomstr"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/6a714e87-de1b-4221-a6e1-f587288b158d/resourceGroups/hr-dev-rg-wzxgsh/providers/Microsoft.Network/networkSecurityGroups/websubnet-nsg/securityRules/Rule-Port-443",
            "name": "Rule-Port-443",
            "network_security_group_name": "websubnet-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-wzxgsh",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.snet-web-nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.snet-web",
            "azurerm_virtual_network.vnet",
            "random_string.randomstr"
          ]
        },
        {
          "index_key": "120",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/6a714e87-de1b-4221-a6e1-f587288b158d/resourceGroups/hr-dev-rg-wzxgsh/providers/Microsoft.Network/networkSecurityGroups/websubnet-nsg/securityRules/Rule-Port-22",
            "name": "Rule-Port-22",
            "network_security_group_name": "websubnet-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-wzxgsh",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.snet-web-nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.snet-web",
            "azurerm_virtual_network.vnet",
            "random_string.randomstr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "snet-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/6a714e87-de1b-4221-a6e1-f587288b158d/resourceGroups/hr-dev-rg-wzxgsh/providers/Microsoft.Network/virtualNetworks/vnet/subnets/appsubnet",
            "name": "appsubnet",
            "resource_group_name": "hr-dev-rg-wzxgsh",
            "virtual_network_name": "vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet",
            "random_string.randomstr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "snet-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.4.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/6a714e87-de1b-4221-a6e1-f587288b158d/resourceGroups/hr-dev-rg-wzxgsh/providers/Microsoft.Network/virtualNetworks/vnet/subnets/bastionsubnet",
            "name": "bastionsubnet",
            "resource_group_name": "hr-dev-rg-wzxgsh",
            "virtual_network_name": "vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet",
            "random_string.randomstr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "snet-db",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/6a714e87-de1b-4221-a6e1-f587288b158d/resourceGroups/hr-dev-rg-wzxgsh/providers/Microsoft.Network/virtualNetworks/vnet/subnets/dbsubnet",
            "name": "dbsubnet",
            "resource_group_name": "hr-dev-rg-wzxgsh",
            "virtual_network_name": "vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet",
            "random_string.randomstr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "snet-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/6a714e87-de1b-4221-a6e1-f587288b158d/resourceGroups/hr-dev-rg-wzxgsh/providers/Microsoft.Network/virtualNetworks/vnet/subnets/websubnet",
            "name": "websubnet",
            "resource_group_name": "hr-dev-rg-wzxgsh",
            "virtual_network_name": "vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet",
            "random_string.randomstr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "snet-app-nsg-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6a714e87-de1b-4221-a6e1-f587288b158d/resourceGroups/hr-dev-rg-wzxgsh/providers/Microsoft.Network/virtualNetworks/vnet/subnets/appsubnet",
            "network_security_group_id": "/subscriptions/6a714e87-de1b-4221-a6e1-f587288b158d/resourceGroups/hr-dev-rg-wzxgsh/providers/Microsoft.Network/networkSecurityGroups/appsubnet-nsg",
            "subnet_id": "/subscriptions/6a714e87-de1b-4221-a6e1-f587288b158d/resourceGroups/hr-dev-rg-wzxgsh/providers/Microsoft.Network/virtualNetworks/vnet/subnets/appsubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.snet-app-nsg",
            "azurerm_network_security_rule.snet-app-nsg-rule-inbound",
            "azurerm_resource_group.rg",
            "azurerm_subnet.snet-app",
            "azurerm_virtual_network.vnet",
            "random_string.randomstr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "snet-bastion-nsg-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6a714e87-de1b-4221-a6e1-f587288b158d/resourceGroups/hr-dev-rg-wzxgsh/providers/Microsoft.Network/virtualNetworks/vnet/subnets/bastionsubnet",
            "network_security_group_id": "/subscriptions/6a714e87-de1b-4221-a6e1-f587288b158d/resourceGroups/hr-dev-rg-wzxgsh/providers/Microsoft.Network/networkSecurityGroups/bastionsubnet-nsg",
            "subnet_id": "/subscriptions/6a714e87-de1b-4221-a6e1-f587288b158d/resourceGroups/hr-dev-rg-wzxgsh/providers/Microsoft.Network/virtualNetworks/vnet/subnets/bastionsubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.snet-bastion-nsg",
            "azurerm_network_security_rule.snet-bastion-nsg-rule-inbound",
            "azurerm_resource_group.rg",
            "azurerm_subnet.snet-bastion",
            "azurerm_virtual_network.vnet",
            "random_string.randomstr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "snet-db-nsg-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6a714e87-de1b-4221-a6e1-f587288b158d/resourceGroups/hr-dev-rg-wzxgsh/providers/Microsoft.Network/virtualNetworks/vnet/subnets/dbsubnet",
            "network_security_group_id": "/subscriptions/6a714e87-de1b-4221-a6e1-f587288b158d/resourceGroups/hr-dev-rg-wzxgsh/providers/Microsoft.Network/networkSecurityGroups/dbsubnet-nsg",
            "subnet_id": "/subscriptions/6a714e87-de1b-4221-a6e1-f587288b158d/resourceGroups/hr-dev-rg-wzxgsh/providers/Microsoft.Network/virtualNetworks/vnet/subnets/dbsubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.snet-db-nsg",
            "azurerm_network_security_rule.snet-db-nsg-rule-inbound",
            "azurerm_resource_group.rg",
            "azurerm_subnet.snet-db",
            "azurerm_virtual_network.vnet",
            "random_string.randomstr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "snet-web-nsg-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6a714e87-de1b-4221-a6e1-f587288b158d/resourceGroups/hr-dev-rg-wzxgsh/providers/Microsoft.Network/virtualNetworks/vnet/subnets/websubnet",
            "network_security_group_id": "/subscriptions/6a714e87-de1b-4221-a6e1-f587288b158d/resourceGroups/hr-dev-rg-wzxgsh/providers/Microsoft.Network/networkSecurityGroups/websubnet-nsg",
            "subnet_id": "/subscriptions/6a714e87-de1b-4221-a6e1-f587288b158d/resourceGroups/hr-dev-rg-wzxgsh/providers/Microsoft.Network/virtualNetworks/vnet/subnets/websubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.snet-web-nsg",
            "azurerm_network_security_rule.snet-web-nsg-rule-inbound",
            "azurerm_resource_group.rg",
            "azurerm_subnet.snet-web",
            "azurerm_virtual_network.vnet",
            "random_string.randomstr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "330cf1aa-2d79-415b-ac18-0a5051601476",
            "id": "/subscriptions/6a714e87-de1b-4221-a6e1-f587288b158d/resourceGroups/hr-dev-rg-wzxgsh/providers/Microsoft.Network/virtualNetworks/vnet",
            "location": "uksouth",
            "name": "vnet",
            "resource_group_name": "hr-dev-rg-wzxgsh",
            "tags": {
              "environment": "dev",
              "owners": "hr"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_string.randomstr"
          ]
        }
      ]
    }
  ]
}